Cammbio de rutas para el swagger.yml
