# people.py
@@ -31,15 +31,6 @@ def read_one_by_dni(dni):
         abort(404, f"Person with DNI {dni} not found")
 
 
-def read_one(lname):
-    person = Person.query.filter(Person.lname == lname).one_or_none()
-
-    if person is not None:
-        return person_schema.dump(person)
-    else:
-        abort(404, f"Person with last name {lname} not found")
-
-
 def update(id, person):
     existing_person = Person.query.filter(Person.id == id).one_or_none()
 
