# swagger.yml
@@ -13,17 +13,39 @@ components:
       type: "object"
       required:
         - lname
+        - dni
       properties:
+        id:
+          type: "integer"
         fname:
           type: "string"
         lname:
           type: "string"
+        dni:
+          type: "string"
+    Pizza:
+      type: "object"
+      properties:
+        id:
+          type: "integer"
+        person_id:
+          type: "integer"
+        content:
+          type: "string"
+
   parameters:
-    lname:
-      name: "lname"
-      description: "Last name of the person to get"
+    id:
+      name: "id"
+      description: "ID of the person"
       in: path
-      required: True
+      required: true
+      schema:
+        type: "integer"
+    dni:
+      name: "dni"
+      description: "DNI of the person to retrieve"
+      in: path
+      required: true
       schema:
         type: "string"
     pizza_id:
@@ -44,59 +66,91 @@ paths:
       responses:
         "200":
           description: "Successfully read people list"
-    post:
-      operationId: "people.create"
-      tags:
-        - People
-      summary: "Create a person"
-      requestBody:
-          description: "Person to create"
-          required: True
           content:
             application/json:
               schema:
-                x-body-name: "person"
-                $ref: "#/components/schemas/Person"
-      responses:
-        "201":
-          description: "Successfully created person"
-  /people/{lname}:
-    get:
-      operationId: "people.read_one"
+                type: array
+                items:
+                  $ref: "#/components/schemas/Person"
+
+    post:
+      operationId: "people.create"
       tags:
-        - People
-      summary: "Read one person"
-      parameters:
-        - $ref: "#/components/parameters/lname"
-      responses:
-        "200":
-          description: "Successfully read person"
-    put:
-      tags:
-        - People
-      operationId: "people.update"
-      summary: "Update a person"
-      parameters:
-        - $ref: "#/components/parameters/lname"
-      responses:
-        "200":
-          description: "Successfully updated person"
+        - "People"
+      summary: "Create a person"
       requestBody:
+        description: "Person to create"
+        required: true
         content:
           application/json:
             schema:
-              x-body-name: "person"
               $ref: "#/components/schemas/Person"
-    delete:
-      tags:
-        - People
-      operationId: "people.delete"
-      summary: "Delete a person"
-      parameters:
-        - $ref: "#/components/parameters/lname"
       responses:
-        "204":
+        "201":
+          description: "Successfully created person"
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Person"
+        "406":
+          description: "Person with specified DNI already exists"
+
+  /people/{dni}:
+    get:
+      operationId: "people.read_one_by_dni"
+      tags:
+        - "People"
+      summary: "Read one person by DNI"
+      parameters:
+        - $ref: "#/components/parameters/dni"
+      responses:
+        "200":
+          description: "Successfully read person by DNI"
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Person"
+        "404":
+          description: "Person with specified DNI not found"
+
+  /people/{id}:
+    put:
+      operationId: "people.update"
+      tags:
+        - "People"
+      summary: "Update a person by ID"
+      parameters:
+        - $ref: "#/components/parameters/id"
+      requestBody:
+        description: "Person data to update"
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: "#/components/schemas/Person"
+      responses:
+        "200":
+          description: "Successfully updated person"
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Person"
+        "404":
+          description: "Person with specified ID not found"
+
+    delete:
+      operationId: "people.delete"
+      tags:
+        - "People"
+      summary: "Delete a person by ID"
+      parameters:
+        - $ref: "#/components/parameters/id"
+      responses:
+        "200":
           description: "Successfully deleted person"
+        "404":
+          description: "Person with specified ID not found"
+
   /pizzas:
     post:
       operationId: "pizzas.create"
@@ -104,21 +158,16 @@ paths:
         - Pizzas
       summary: "Create a pizza associated with a person"
       requestBody:
-          description: "Pizza to create"
-          required: True
-          content:
-            application/json:
-              schema:
-                x-body-name: "pizza"
-                type: "object"
-                properties:
-                  person_id:
-                    type: "integer"
-                  content:
-                    type: "string"
+        description: "Pizza to create"
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: "#/components/schemas/Pizza"
       responses:
         "201":
           description: "Successfully created a pizza"
+
   /pizzas/{pizza_id}:
     get:
       operationId: "pizzas.read_one"
@@ -130,6 +179,12 @@ paths:
       responses:
         "200":
           description: "Successfully read one pizza"
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Pizza"
+        "404":
+          description: "Pizza not found"
     put:
       tags:
         - Pizzas
@@ -137,18 +192,22 @@ paths:
       summary: "Update a pizza"
       parameters:
         - $ref: "#/components/parameters/pizza_id"
-      responses:
-        "200":
-          description: "Successfully updated pizza"
       requestBody:
+        description: "Updated pizza data"
+        required: true
         content:
           application/json:
             schema:
-              x-body-name: "pizza"
-              type: "object"
-              properties:
-                content:
-                  type: "string"
+              $ref: "#/components/schemas/Pizza"
+      responses:
+        "200":
+          description: "Successfully updated pizza"
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Pizza"
+        "404":
+          description: "Pizza not found"
     delete:
       tags:
         - Pizzas
@@ -159,3 +218,5 @@ paths:
       responses:
         "204":
           description: "Successfully deleted pizza"
+        "404":
+          description: "Pizza not found"
